Enhance module handling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "http-proxy-server",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +13,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "devDependencies": {
     "@types/node": "^22.15.21",
     "typescript": "^5.8.3"
