--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.15.21",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "axios": "^1.9.0",
+    "https-proxy-agent": "^7.0.6"
+  },
+  "dependencies": {
+    
   }
 }
